mainwindow: be sure to finish Kaffeine when the main window closes

Somehow, sometimes closing the main window is not exiting Kaffeine.

Fix that, by hooking the close() signal.

BUG: 363869

Signed-off-by: Mauro Carvalho Chehab <mchehab@osg.samsung.com>